# moos-ivp-affi

./: README.md
lib/: libBHV_SimpleWaypoint.dylib
missions/alder/: alder.bhv  alder.moos  alder.moos++
missions/factor/: factor.moos
missions/lab_05/alpha/: .LastOpenedMOOSLogDirectory  alpha.bhv  alpha.moos
missions/lab_05/bravo_loiter/: bravo_loiter.bhv  bravo_loiter.moos  bravo_loiter.moos~
missions/lab_05/bravo_loiter_dbl/: .LastOpenedMOOSLogDirectory  bravo_loiter_dbl.bhv  bravo_loiter_dbl.moos
missions/lab_05/bravo_loiter_uuv/: bravo_loiter_uuv.bhv  bravo_loiter_uuv.moos
missions/lab_05/bravo_uuv_surface/: bravo_uuv_surface.bhv  bravo_uuv_surface.moos
missions/lab_07/alpha_bravo_pshare/: alpha.moos  bravo.bhv  bravo.moos  launch.sh  shoreside.moos
missions/lab_07/distrib_traveling_salesman/: meta_shoreside.moos  meta_vehicle.bhv  meta_vehicle.moos  plug_pPointAssign.moos  plug_uTimerScript.moos
missions/lab_07/henry_gilda_auto_refuel/: meta_vehicle.bhv
missions/lab_07/henry_gilda_refuel/: meta_shoreside.moos  meta_vehicle.bhv
missions/lab_09/charlie_dana_message/: plug_uFldNodeBroker.moos
missions/lab_09/charlie_dana_nodecomms/: meta_shoreside.moos
missions/lab_09/charlie_dana_reassign/: meta_shoreside.moos  meta_vehicle.moos  (+1 more)
src/: CMakeLists.txt  CMakeLists.txt~
src/lib_behaviors-affi/: BHV_MyCircle.cpp  BHV_MyCircle.h  BHV_MySinusoid.cpp  BHV_MySinusoid.h  BHV_Pulse.cpp  BHV_Pulse.h  BHV_ZigLeg.cpp  BHV_ZigLeg.h  CMakeLists.txt
src/lib_behaviors-test/: BHV_Pulse.h~  CMakeLists.txt
src/pCommunicationAngle/: CMakeLists.txt  CommunicationAngle.cpp  CommunicationAngle.h  CommunicationAngle_Info.cpp  CommunicationAngle_Info.h  main.cpp
src/pGenPath/: CMakeLists.txt  GenPath.cpp  GenPath.h  GenPath_Info.cpp  GenPath_Info.h  main.cpp
src/pOdometry2/: CMakeLists.txt  Odometry2.cpp  Odometry2.h  Odometry2_Info.cpp  Odometry2_Info.h  main.cpp  pOdometry2.moos
src/pPointAssign/: CMakeLists.txt  PointAssign.cpp  PointAssign.h  PointAssign_Info.cpp  PointAssign_Info.h  main.cpp
src/pPrimeFactor2/: CMakeLists.txt  PrimeFactor2.cpp  PrimeFactor2.h  PrimeFactor2_Info.cpp  PrimeFactor2_Info.h  main.cpp
src/pPrimeFactorTester2/: CMakeLists.txt  PrimeFactorTester2.cpp  PrimeFactorTester2.h  PrimeFactorTester2_Info.cpp  PrimeFactorTester2_Info.h  main.cpp  pPrimeFactorTester2.moos
src/pSinuParamGrab/: CMakeLists.txt  SinuParamGrab.cpp  SinuParamGrab.h  SinuParamGrab_Info.cpp  SinuParamGrab_Info.h  main.cpp  pSinuParamGrab.moos
src/uFldHazardMgrX/: HazardMgr.cpp
(+84 files in other folders)
